DEPRECATED/Kubernetes/K3S/SpeedtestTracker/speedtestTracker.yaml
kind: Service
apiVersion: v1
metadata:
  name: postgres-db-postgresql-1
  namespace: monitoring
spec:
  type: ExternalName
  externalName: postgres-db-postgresql.database.svc.cluster.local
  ports:
    - port: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: speedtest-tracker
  name: speedtest-tracker
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: speedtest-tracker
  template:
    metadata:
      labels:
        app: speedtest-tracker
    spec:
      containers:
        - name: speedtest-tracker
          image: lscr.io/linuxserver/speedtest-tracker:0.20.7
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: speedtest-tracker
  name: speedtest-tracker-svc
  namespace: monitoring
spec:
  type: ClusterIP
  selector:
    app: speedtest-tracker
  ports:
    - port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speedtest-tracker-http
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    gethomepage.dev/href: "https://speedtest-tracker.k3s.wiserisk.be"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Speedtest Tracker
    gethomepage.dev/group: K3S
    gethomepage.dev/icon: so-speedtest
    gethomepage.dev/app: speedtest-tracker
    gethomepage.dev/name: Speedtest Tracker
    gethomepage.dev/widget.type: "speedtest"
    gethomepage.dev/widget.url: "https://speedtest-tracker.k3s.wiserisk.be"
spec:
  rules:
    - host: speedtest-tracker.k3s.wiserisk.be
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: speedtest-tracker-svc
                port:
                  number: 80
